<resources>
    <string name="my_name">LifeCycle</string>
    <string name="Default">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonCE">CE</string>
    <string name="buttonC">C</string>
    <string name="buttonBS">BS</string>
    <string name="buttonDiv">/</string>
    <string name="buttonAdd">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonBi">+/-</string>
    <string name="button0">0</string>
    <string name="buttonDot">.</string>
    <string name="buttonEqual">=</string>
    <string name="buttonMulti">x</string>
</resources>